Externalise credential properties

--- a/elasticsearch-consumer/pom.xml
+++ b/elasticsearch-consumer/pom.xml
@@ -11,4 +11,12 @@
 
     <artifactId>elasticsearch-consumer</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.6.2</version>
+        </dependency>
+    </dependencies>
+
 </project>
