--- a/kafka-producer/pom.xml
+++ b/kafka-producer/pom.xml
@@ -11,4 +11,21 @@
 
     <artifactId>kafka-producer</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>hbc-core</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+
 </project>
