--- a/elasticsearch-consumer/pom.xml
+++ b/elasticsearch-consumer/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>kafka-twitter-elasticsearch</artifactId>
-        <groupId>com.cadebe</groupId>
+        <groupId>dev.cadebe</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
